--- a/projeto/package.yaml
+++ b/projeto/package.yaml
@@ -44,6 +44,7 @@ dependencies:
 - vector
 - time
 - case-insensitive
+- wai-cors >= 0.2.5
 - wai
 
 # The library contains all of our application code. The executable
