--- a/stack.yaml
+++ b/stack.yaml
@@ -4,6 +4,14 @@
 # For advanced use and comprehensive documentation of the format, please see:
 # https://docs.haskellstack.org/en/stable/yaml_configuration/
 
+# A warning or info to be displayed to the user on config load.
+user-message: ! 'Warning (added by new or init): Some packages were found to have
+  names conflicting with others and have been commented out in the packages section.
+
+  You can suppress this message by removing it from stack.yaml
+
+'
+
 # Resolver to choose a 'specific' stackage snapshot or a compiler version.
 # A snapshot resolver dictates the compiler version and the set of packages
 # to be used for project dependencies. For example:
@@ -15,7 +23,7 @@
 # resolver:
 #  name: custom-snapshot
 #  location: "./custom-snapshot.yaml"
-resolver: lts-9.13
+resolver: lts-9.14
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
@@ -36,7 +44,11 @@ resolver: lts-9.13
 # non-dependency (i.e. a user package), and its test suites and benchmarks
 # will not be run. This is useful for tweaking upstream packages.
 packages:
-- .
+- projeto
+# The following packages have been ignored due to package name conflict 
+# with other packages.
+#- projeto_OLD
+
 # Dependency packages to be pulled from upstream that are not in the resolver
 # (e.g., acme-missiles-0.3)
 extra-deps: []
